sendGetRequest refactored